--- a/artifact/web/EC site/practice/style.css
+++ b/artifact/web/EC site/practice/style.css
@@ -14,8 +14,8 @@ p {
     margin: 0;
 }
 img {
-    width: 100%;
-    height: fit-content;
+    width: 100%;    
+    vertical-align: bottom;
 }
 
 a {
